Fix design - center button and z-index

--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
     --darkBlue: #13375e;
     --lightBlue: #00519b;
     --title: #fd1e1e;
-    --main: #bc0000;
+    --main: #4b1c00;
     --pattern: url("assets/images/tileBG2.png");
 }
 html, body{
@@ -57,10 +57,11 @@ header{
     top: 0;
     width: 100%;
     z-index: 5000;
+    box-sizing: border-box;
 }
 .headerChild{
     margin: 0 auto;
-    width: 830px;
+    width: 555px;
 }
 .title_mainColor, .title_witeLine, .title_blueLine, .title_backOffset {
     margin: 0px;
@@ -74,12 +75,15 @@ header{
 .title_backOffset{ -webkit-text-stroke: 22PX #00519b; top: 8px; text-shadow:7px 15px 10px #000000; }
 
 .addNote_Btn{
+    position: fixed;
     float: right;
     width: 234px;
     height: 70px;
-    margin-top: 32px;
-    background-image: url("assets/images/addNoteBtn.png");
+    background-image: url(assets/images/addNoteBtn.png);
     filter: drop-shadow(0px 5px 5px #000000);
+    left: 50%;
+    transform: translate(-117px, 40%);
+    z-index: 100;
 }
 .addNote_Btn:hover{
     cursor: pointer;
@@ -88,7 +92,7 @@ header{
 
 /* =========================== Notes =========================== */
 .notesContainer{
-    padding: 80px 60px 0 140px;
+    padding: 140px 60px 0 140px;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
@@ -168,8 +172,8 @@ header{
     position: fixed;
     left: 20px; top: 50%;
     transform: translate(0, -40%);
-    background-color: #1a0500;
-    border: solid 3px white;
+    background-color: #1a0500af;
+    border: solid 2px white;
     border-radius: 60px;
     width: 70px;
     height: 280px;
@@ -216,6 +220,7 @@ header{
     border: solid 2px #ffffffbe;
     border-radius: 30px;
     filter: drop-shadow(0px 10px 20px #000000b3);
+    z-index: 5000;
 }
 .formDiv h3{
     margin-top: 0;
@@ -330,4 +335,5 @@ footer{
     height: 5000px;
     overflow: hidden;
     background-color: #000000aa;
+    z-index: 4990;
 }
